src/index.css
/* ... */
@media screen and (min-width: 992px) {
  .modal-container {
    max-width: unset;
    width: unset;
    box-shadow: unset;
  }

  .modal-container.modal-container__application-form {
    grid-template-columns: 19vw 1fr;
    padding-left: 1rem;
    height: 41.5vw;
    top: 1.875rem;
    max-height: unset;
  }

  .modal-container.modal-container__application-form.modal-container__stripe {
    grid-template-columns: unset;
  }

  .modal-overlay.show-modal {
    background: var(--clr-off-white-text);
  }

  .modal-overlay.show-modal.modal-overlay__cookie-consent {
    background: rgba(0, 0, 0, 0.5);
  }
}

/*
=============== 
Contact Form Modal
===============
*/

.form {
  width: 87.2vw;
  max-width: var(--width-fixed-540);
  background: var(--white);
  border-radius: var(--borderRadius);
  box-shadow: var(--shadow-2);
  padding: 3vh 1.5rem 0;
  margin: 3vh auto 1vh;
}

.form .fixed-height {
  height: 48vh;
  max-height: 20rem;
}

.form .fixed-height+div {
  margin-top: 1vh;
}

.form-input,
.form-textarea {
  width: 100%;
  padding: 0.775rem 0.75rem 0.775rem 1.125rem;
  border-radius: var(--radius-input);
  border: 1px solid var(--grey-300);
  font-size: 0.775rem;
  line-height: 1.86;
  font-family: var(--ff-primary);
  color: var(--grey-400);
  font-weight: var(--fw-600);
}

.form-input.form-input__select {
  padding-top: .875rem;
  padding-bottom: .875rem;
}

.form-input.form-input__date {
  padding-top: .7125rem;
  padding-bottom: .7125rem;
}

.form-input.label-q {
  padding-bottom: .5rem;
}

.form-input.label-q.label-q__availability {
  padding: 0 0 1.5vh
}

.form-input.form-input__select>div {
  margin-right: 0;
}

.form-input::placeholder,
.form-textarea::placeholder {
  color: var(--clr-light-grey);
  font-weight: var(--fw-400);
}

.form-input:focus-visible,
.form-textarea:focus-visible {
  outline-color: var(--clr-primary-5);
}

.form-row {
  margin-bottom: .75rem;
  position: relative;
}

.form-row.form-row__requirements {
  margin-bottom: 1.5rem;
}

.form-row.form-row__additional-requirements {
  margin-bottom: .75rem;
}

.form-textarea {
  height: 7rem;
}

::placeholder {
  font-family: inherit;
  color: var(--grey-400);
}

.form-alert {
  color: var(--red-dark);
  letter-spacing: var(--letterSpacing);
  text-transform: capitalize;
}

/* extra styles */
.form .form-label {
  position: absolute;
  top: calc(50% - 15px);
  left: 1.213125rem;
  font-size: 0.75rem;
  padding: 0.25rem 0.725rem;
  background: var(--clr-secondary);
}

.form .btn-block {
  margin-top: 0.5rem;
}

.modal-footer {
  margin-left: 11.9266%;
  margin-right: 11.9266%;
  padding-bottom: 4px;
}

.modal-footer-text {
  color: var(--clr-grey-muted);
  font-size: 12px;
  line-height: 1.91;
  font-weight: var(--fw-500);
}

.modal-footer-text span {
  font-weight: var(--fw-700);
  color: var(--clr-secondary);
}

.modal-footer-text.modal-footer-text__application-form span {
  font-weight: var(--fw-600);
  color: var(--grey-400);
}

.form.form__cookies {
  margin-bottom: 3vh;
  margin-top: 1vh;
}

.para__learn-more {
  margin-top: 1.5rem;
}

.link__learn-more {
  display: none;
}

@media screen and (min-width: 768px) {
  .form {
    padding-left: 5rem;
    padding-right: 5rem;
    margin-bottom: 2vh;
    padding-top: 1vh;
  }

  .form-row {
    margin-bottom: 1.25rem;
  }

  .form-row:last-child {
    margin-bottom: 0;
  }

  .modal-footer-text {
    margin-bottom: 2.25rem;
  }

  .form-input,
  .form-textarea {
    font-size: 0.875rem;
    padding: 0.875rem 1.5rem;
  }

  .form-input.form-input__select {
    padding-top: 1.0625rem;
    padding-bottom: 1.0625rem;
  }

  .form .fixed-height {
    max-height: 25.5rem;
  }

  .form-input.label-q.label-q__availability {
    padding-bottom: .75vh;
  }

  .form-row.form-row__requirements {
    margin-bottom: 2.5rem;
  }

  .form-row.form-row__additional-requirements {
    margin-bottom: 1.75rem;
  }

  .form-row.form-row__additional-requirements.form-row__agreement {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
  }

  .form-row.form-row__additional-requirements.form-row__agreement:nth-child(5) {
    margin-bottom: -1rem;
  }

  .form-row.form-row__additional-requirements p {
    margin-left: 5vw;
    margin-right: 5vw;
  }

  .form-input.form-input__date {
    padding-top: .8125rem;
    padding-bottom: .8125rem;
  }

  .form.form__cookies {
    max-width: unset;
    display: flex;
    align-items: center;
    padding-left: 0;
    padding-right: 0;
    margin-bottom: 0;
    margin-top: 0;
    padding-top: 0;
  }

  .form-row__cookies,
  .para__cookies,
  .para__learn-more {
    margin-bottom: 0;
  }

  .para__cookies {
    text-align: left;
  }

  .para__learn-more {
    display: none;
  }

  .link__learn-more {
    display: inline;
  }
}

@media screen and (min-width: 992px) {
  .form {
    padding-left: 7vw;
    padding-right: 7vw;
    width: 45vw;
    max-width: unset;
  }

  .form.form__contact {
    padding-left: 4vw;
    padding-right: 4vw;
    width: 38vw;
    max-width: unset;
  }

  .form.form__cookies {
    padding-left: 0;
    padding-right: 0;
    width: 71vw;
  }

  .form-input,
  .form-textarea {
    font-size: 1.1vw;
    padding: 0.575vw 1.675vw;
    border-radius: var(--radius);
  }

  .form-row {
    margin-bottom: 1.389vw;
  }

  .form-input.form-input__select {
    padding-top: .875rem;
    padding-bottom: .875rem;
  }

  .form-row.form-row__additional-requirements p {
    margin-left: 1.5vw;
    margin-right: 1.5vw;
  }

  .form-input.form-input__date {
    padding-top: .51vw;
    padding-bottom: .51vw;
  }

  .form-row__cookies {
    margin-bottom: 0;
    margin-right: 80px;
  }
}

/*
=============== 
Application Form Modals
===============
*/

.progress-bar {
  position: absolute;
  overflow: hidden;
  counter-reset: step;
  top: -22vw;
  width: 90vw;
  display: flex;
  justify-content: space-between;
  padding-top: 7.2533333vw;
}
/* ... */

